# Image-multithresholding

./: .gitignore  LICENSE  README.md  errorSTA.R  expansion.R  optimumCoef.R  quadraticSolve.R  requirements.txt  setup.cfg  test_j.py  thresholdPSO.R  thresholdSTA.R  translation.R
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test_j-checkpoint.py
Bibliography/: Algorithms.xlsx
PythonCodes/: bibliotecaFunciones.py  probando thresholdedImage.ipynb  readImage.py
PythonCodes/tests/: base_tests.py  candidates_tests.py  hca_tests.py
PythonCodes/utils/: combinaciones.py  probando thresholdedImage.ipynb
RCodes/Functions/: JStar.R  PSNR.R  arrowDirection.R  betweenClassVar.R  classificationRule.R  clusterMean.R  clusterVar.R  discrepancy.R  dualMaxLikelihood.R  grayClustering.R  hillIdentification.R  imageProbabilities.R  mom1UpToLevel.R  normalSum.R  objectiveError.R  optimalClassesATC.R  optimalWindow.R  partialSum.R  partitionMin.R  probUpToLevels.R  randomSelection.R  searchingWindow.R  thrCandidates.R  thresholdABC.R  thresholdACO.R  thresholdATC.R  thresholdDEO.R  thresholdDPK.R  thresholdFSR.R  thresholdFastOtsu.R  thresholdGAA.R  thresholdHCA.R  thresholdHST.R  thresholdLRA.R  thresholdMCC.R  thresholdMEC.R  thresholdMLL.R  thresholdOtsu.R  thresholdPSO.R  thresholdSFL.R  (+7 more)
docs/: Getting Started.ipynb  conf.py  index.html
docs/.ipynb_checkpoints/: Getting Started-checkpoint.ipynb
docs/_build/html/: .buildinfo  (+5 more)
docs_old/: search.js
others/: Untitled.ipynb
others/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/: base_tests.py  candidates_tests.py  hca_tests.py
(+78 files in other folders)
