[metadata]
name = image-multi-thresholding-test01
version = 0.0.6
author = UTN FRBA
author_email = author@example.com
description = Library of functions for image thresholding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arey1911/Image-multi-thresholding
project_urls =
    Bug Tracker = https://github.com/arey1911/Image-multi-thresholding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src