[metadata]
name = image-multithresholding
version = 1.0
author = Joaquin Leon, Andrea Rey
author_email = jleon@utn.frba.edu.ar, arey@utn.frba.edu.ar
description = A Python 3 library to find thresholds in the gray levels histogram of an image.
long_description = file: docs/Getting Started.ipynb
long_description_content_type = application/vnd.jupyter
url = https://github.com/image-multithresholding/Image-multithresholding
project_urls =
    Bug Tracker = https://github.com/image-multithresholding/Image-multithresholding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
publisher = Python Software Foundation

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src